--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta name="keywords" content="HTML5 Template" />
-	<meta name="description" content="Multipress - Responsive Multipurpose HTML5 Template">
+	<meta name="description" content="Oriana Ruiz Curriculum">
 	<meta name="author" content="">
 
 	<title>Oriana Ruiz - Desarrollo Web y Backend</title>
@@ -44,7 +44,8 @@
 	<!--[if lt IE 9]>
 	<script src="/js/libs/html5.js"></script>
 	<![endif]-->
-
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<!-- Style Switch -->
 	<link rel="stylesheet" type="text/css" href="css/colors/pink-black.css" title="pink" media="screen" />
 
@@ -69,8 +70,7 @@
 				<nav>
 				<ul class="navigation">
 					<li><a href="#">Perfil y Contacto <i class="fa fa-user"></i></a></li>
-					<!--<li><a href="#">Trabajo <i class="fa fa-briefcase"></i></a></li>-->
-					<li><a href="#">Curriculum <i class="fa fa-file-text"></i></a></li>
+					<li><a href="#">Trabajo <i class="fa fa-suitcase"></i></a></li>
 				</ul>
 				</nav>
 			</div>
@@ -83,7 +83,7 @@
 							<div class="profile" id="1">
 								<h2>Hola, soy <span>Oriana Ruiz</span><br>Desarrolador Web y Backend</h2>
 								<div class="sep1"></div>
-								<p>Soy estudiante del 8vo semestre, futura licenciada en Computacion, tengo experiencia desarrollando aplicaciones web con Laravel, y Codeigniter (un oscuro pasado). Mi vida se rige bajo el lema: Si no se sabe, se aprende; si se sabe, se emprende.</p>
+								<p>Soy estudiante del 8vo semestre de la Licenciatura en Ciencias de la Computación. A lo largo de mi carrera he aprendido a trabajar en el arte de la programación Web. En conjunto con la base de conocimiento impartida en la universidad, y a mi instinto autodidacta, tengo experiencia haciendo aplicaciones Web con Responsive Design usando Laravel, Codeigniter (un oscuro pasado), con MySQL y PostgreSQL, CSS3 y HTML5.</p>
 								<div class="personal-info col-md-12 no-padding">
 									<h4>Sobre mi</h4>
 									<div class="sep2"></div>
@@ -98,7 +98,7 @@
 											<div class="p-info"><em>e-mail</em><span>oriru92@gmail.com</span></div>
 										</li>
 										<li>
-											<div class="p-info"><em>telefono</em><span>+58 (414) 046-5042</span></div>
+											<div class="p-info"><em>teléfono</em><span>+58 (414) 046-5042</span></div>
 										</li>
 									</ul>
 								</div>
@@ -107,232 +107,32 @@
 						</section>
 						<!-- SECTION 1 - HOMEPAGE -->
 
-						<!-- SECTION 2 - WORKS / PROJECTS / PORTFOLIO -->
-						<section class="no-display">
-							<div class="works" id="2">
-								<div class="page-head">
-									<div class="row">
-										<div class="col-md-5">
-											<h3>Portfolio</h3>
-										</div>
-										<div class="col-md-7">
-											<div class="np-main">
-												<p>Go to next/previous page</p>
-												<div class="np-controls">
-													<a href="#" class="previous"><i class="fa fa-arrow-circle-left"></i></a>
-													<a href="#" class="next"><i class="fa fa-arrow-circle-right"></i></a>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="portfolio-wrap">
-									<div class="row">
-										<ul id="filter-list" class="clearfix">
-											<li class="filter" data-filter="all"><i class="fa fa-th"></i> All</li>
-											<li class="filter" data-filter="webdesign">Web Design</li>
-											<li class="filter" data-filter="appicon">App Icons</li>
-											<li class="filter" data-filter="iosappui">iOS App UI</li>
-											<li class="filter" data-filter="illustration">Illustration</li>
-										</ul>
-										<ul id="portfolio">
-											<li class="item col-md-4 webdesign">
-												<a title="Example 1" href="images/projects/1-big.jpg" data-lightbox-gallery="gallery1" class="nivo-lbox">
-													<div class="folio-img">
-														<img src="images/projects/1.jpg" alt="" class="img-responsive">
-														<div class="overlay">
-															<div class="overlay-inner">
-																<h4>Cool App Design</h4>
-																<p>branding, logo</p>
-															</div>
-														</div>
-													</div>
-												</a>
-											</li>
-											<li class="item col-md-4 illustration">
-												<a title="Sample 2" href="https://www.youtube.com/watch?v=L9szn1QQfas" data-lightbox-gallery="gallery1" class="nivo-lbox">
-													<div class="folio-img">
-														<img src="images/projects/2.jpg" alt="" class="img-responsive">
-														<div class="overlay">
-															<div class="overlay-inner">
-																<h4>Cool App Design</h4>
-																<p>branding, logo</p>
-															</div>
-														</div>
-													</div>
-												</a>
-											</li>
-											<li class="item col-md-4 appicon">
-												<a title="i'm Number 3" href="http://vimeo.com/71071717" data-lightbox-gallery="gallery1" class="nivo-lbox">
-													<div class="folio-img">
-														<img src="images/projects/3.jpg" alt="" class="img-responsive">
-														<div class="overlay">
-															<div class="overlay-inner">
-																<h4>Cool App Design</h4>
-																<p>branding, logo</p>
-															</div>
-														</div>
-													</div>
-												</a>
-											</li>
-											<li class="item col-md-4 iosappui">
-												<a title="Example 4" href="images/projects/1-big.jpg" data-lightbox-gallery="gallery1" class="nivo-lbox">
-													<div class="folio-img">
-														<img src="images/projects/4.jpg" alt="" class="img-responsive">
-														<div class="overlay">
-															<div class="overlay-inner">
-																<h4>Cool App Design</h4>
-																<p>branding, logo</p>
-															</div>
-														</div>
-													</div>
-												</a>
-											</li>
-											<li class="item col-md-4 iosappui">
-												<a title="Sample 5" href="images/projects/1-big.jpg" data-lightbox-gallery="gallery1" class="nivo-lbox">
-													<div class="folio-img">
-														<img src="images/projects/5.jpg" alt="" class="img-responsive">
-														<div class="overlay">
-															<div class="overlay-inner">
-																<h4>Cool App Design</h4>
-																<p>branding, logo</p>
-															</div>
-														</div>
-													</div>
-												</a>
-											</li>
-											<li class="item col-md-4 illustration">
-												<a title="Lorem ipsum 6" href="images/projects/1-big.jpg" data-lightbox-gallery="gallery1" class="nivo-lbox">
-													<div class="folio-img">
-														<img src="images/projects/6.jpg" alt="" class="img-responsive">
-														<div class="overlay">
-															<div class="overlay-inner">
-																<h4>Cool App Design</h4>
-																<p>branding, logo</p>
-															</div>
-														</div>
-													</div>
-												</a>
-											</li>
-											<li class="item col-md-4 webdesign">
-												<a title="Example 7" href="images/projects/1-big.jpg" data-lightbox-gallery="gallery1" class="nivo-lbox">
-													<div class="folio-img">
-														<img src="images/projects/7.jpg" alt="" class="img-responsive">
-														<div class="overlay">
-															<div class="overlay-inner">
-																<h4>Cool App Design</h4>
-																<p>branding, logo</p>
-															</div>
-														</div>
-													</div>
-												</a>
-											</li>
-											<li class="item col-md-4 iosappui">
-												<a title="Sample 8" href="images/projects/1-big.jpg" data-lightbox-gallery="gallery1" class="nivo-lbox">
-													<div class="folio-img">
-														<img src="images/projects/8.jpg" alt="" class="img-responsive">
-														<div class="overlay">
-															<div class="overlay-inner">
-																<h4>Cool App Design</h4>
-																<p>branding, logo</p>
-															</div>
-														</div>
-													</div>
-												</a>
-											</li>
-											<li class="item col-md-4 webdesign">
-												<a title="Project 9" href="images/projects/1-big.jpg" data-lightbox-gallery="gallery1" class="nivo-lbox">
-													<div class="folio-img">
-														<img src="images/projects/9.jpg" alt="" class="img-responsive">
-														<div class="overlay">
-															<div class="overlay-inner">
-																<h4>Cool App Design</h4>
-																<p>branding, logo</p>
-															</div>
-														</div>
-													</div>
-												</a>
-											</li>
-											<li class="item col-md-4 illustration">
-												<a title="Example 10" href="images/projects/1-big.jpg" data-lightbox-gallery="gallery1" class="nivo-lbox">
-													<div class="folio-img">
-														<img src="images/projects/10.jpg" alt="" class="img-responsive">
-														<div class="overlay">
-															<div class="overlay-inner">
-																<h4>Cool App Design</h4>
-																<p>branding, logo</p>
-															</div>
-														</div>
-													</div>
-												</a>
-											</li>
-											<li class="item col-md-4 appicon">
-												<a title="Item 11" href="images/projects/1-big.jpg" data-lightbox-gallery="gallery1" class="nivo-lbox">
-													<div class="folio-img">
-														<img src="images/projects/11.jpg" alt="" class="img-responsive">
-														<div class="overlay">
-															<div class="overlay-inner">
-																<h4>Cool App Design</h4>
-																<p>branding, logo</p>
-															</div>
-														</div>
-													</div>
-												</a>
-											</li>
-											<li class="item col-md-4 iosappui">
-												<a title="Sample 12" href="images/projects/1-big.jpg" data-lightbox-gallery="gallery1" class="nivo-lbox">
-													<div class="folio-img">
-														<img src="images/projects/12.jpg" alt="" class="img-responsive">
-														<div class="overlay">
-															<div class="overlay-inner">
-																<h4>Cool App Design</h4>
-																<p>branding, logo</p>
-															</div>
-														</div>
-													</div>
-												</a>
-											</li>
-										</ul>
-									</div>
-								</div>
-							</div>
-						</section>
-						<!-- SECTION 2 - WORKS / PROJECTS / PORTFOLIO -->
-
 						<!-- SECTION 3 - CV / RESUME -->
 						<section class="no-display">
 							<div class="item resume" id="3">
 								<div class="page-head">
 									<div class="row">
 										<div class="col-md-5">
-											<h3>Curriculum Vitae</h3>
+											<h3>Currículum</h3>
 										</div>
-										<!--
-										<div class="col-md-7">
-											<div class="np-main">
-												<p>Go to next/previous page</p>
-												<div class="np-controls">
-													<a href="#" class="previous"><i class="fa fa-arrow-circle-left"></i></a>
-													<a href="#" class="next"><i class="fa fa-arrow-circle-right"></i></a>
-												</div>
-											</div>
-										</div>
-										-->
 									</div>
 								</div>
 								<div class="resume-info">
-									<h4>Educacion</h4>
+									<h4>Educación</h4>
 									<div class="sep2"></div>
 									<ul>
 										<li>
-											<h5>Licenciatura en Ciencias de la Computacion</h5>
+											<h5>Licenciatura en Ciencias de la Computación</h5>
+											<h5>Universidad de Carabobo</h5>
 											<span class="year"><i class="fa fa-calendar"></i> 2010 - </span>
-											<p>Academy of Art University's School of Web Design & New Media is the intersection between traditional design and new technologies.</p>
+											<p>Actualmente en el octavo (8) semestre.</p>
+											<p>El Licenciado en Computación se ocupa de plantear y de resolver problemas que requieren la utilización del computador con una orientación científica, además de resolver los problemas de utilización de los sistemas de computación en el campo de las ciencias exactas, ciencias naturales y ciencias humanas.</p>
 										</li>
 										<li>
-											<h5>Tecnico Medio en Servicios Administrativos Mencion Informatica</h5>
+											<h5>Técnico Medio en Servicios Administrativos Mención Informática</h5>
+											<h5>U.E. Colegio Don Bosco</h5>
 											<span class="year"><i class="fa fa-calendar"></i> 1997 - 2010</span>
-											<p>Information technology (IT) workers can be found in many types of organizations. According to the U.S. Department of Labor, "In the modern workplace, it is imperative that Information Technology (IT) works both effectively and reliably</p>
+											<p>Formación técnica de calidad, aplicando desde conocimientos básicos del computador, hasta el aprendizaje de herramientas de desarrollo de Software, con una formación fundamentada con un profundo sentido moral y ético, que forjó mi carácter para las tareas que me ha tocado afrontar en mi vida personal y profesional.</p>
 										</li>										
 									</ul>
 								</div>
@@ -341,75 +141,76 @@
 									<div class="sep2"></div>
 									<ul>
 										<li>
-											<p>Wordpress Development <span>71%</span></p>
+											<p>Laravel <span>75%</span></p>
 											<div class="skills-bg"><span class="skill1"></span></div>
 										</li>
 										<li>
-											<p>Photoshop <span>85%</span></p>
+											<p>JavaScript <span>70%</span></p>
 											<div class="skills-bg"><span class="skill2"></span></div>
+										</li>
+										<li>
+											<p>MySQL <span>75%</span></p>
+											<div class="skills-bg"><span class="skill4"></span></div>
 										</li>
 										<li>
 											<p>HTML5/CSS3 <span>76%</span></p>
 											<div class="skills-bg"><span class="skill3"></span></div>
 										</li>
 										<li>
-											<p>Ruby on Rails <span>53%</span></p>
-											<div class="skills-bg"><span class="skill4"></span></div>
-										</li>
-										<li>
-											<p>Social Marketing <span>69%</span></p>
+											<p>Bootstrap <span>69%</span></p>
 											<div class="skills-bg"><span class="skill5"></span></div>
 										</li>
 									</ul>
 								</div>
 								<div class="services-info">
-									<h4>Services</h4>
+									<h4>Servicios</h4>
 									<div class="sep2"></div>
 									<ul>
 										<li>
-											<i class="fa fa-cloud"></i>
-											<h5>Design</h5>
+											<i class="fa fa-code"></i>
+											<h5>Programación</h5>
 										</li>
 										<li>
-											<i class="fa fa-smile-o"></i>
-											<h5>Coding</h5>
+											<i class="fa fa-database"></i>
+											<h5>Bases de datos</h5>
 										</li>
 										<li>
 											<i class="fa fa-desktop"></i>
-											<h5>Responsive</h5>
+											<h5>Responsive Design</h5>
 										</li>
 										<li>
-											<i class="fa fa-text-width"></i>
-											<h5>Planing</h5>
+											<i class="fa fa-thumbs-up"></i>
+											<h5>Asesoría</h5>
 										</li>
 										<li>
-											<i class="fa fa-comment"></i>
-											<h5>Wordpress</h5>
+											<i class="fa fa-paint-brush"></i>
+											<h5>Diseño</h5>
 										</li>
 										<li>
-											<i class="fa fa-picture-o"></i>
-											<h5>Photography</h5>
+											<i class="fa fa-cloud"></i>
+											<h5>Cloud Solutions</h5>
 										</li>
 									</ul>
 								</div>
 								<div class="resume-info">
-									<h4>Work Experience</h4>
+									<h4>Experiencia laboral</h4>
 									<div class="sep2"></div>
 									<ul>
 										<li>
-											<h5>Graphic River</h5>
-											<span class="year"><i class="fa fa-calendar"></i> 2001 - 2004</span>
-											<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor.</p>
+											<h5>Grupo Nepuntobiz, C.A</h5>
+											<span class="year"><i class="fa fa-calendar"></i> Nov 2015 - act</span>
+											<p>Actualmente me desempeño como Consultor de Desarrollo Web y Móvil, donde he desarrollado aplicaciones web administrativas, diseño de bases de datos y sitios web empresariales y de capacitación. Actualmente reporto a la Gerencia de Proyectos.</p>
 										</li>
 										<li>
-											<h5>Video Hive</h5>
-											<span class="year"><i class="fa fa-calendar"></i> 2005 - 2008</span>
-											<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</p>
+											<h5>Performance Latinoamericana, S.R.L.</h5>
+											<span class="year"><i class="fa fa-calendar"></i> Nov - 2013</span>
+											<p>Me desempeñé como Operadora de Telemercadeo, donde mi tarea se enfocaba en la adquisición de clientes potenciales y mantención de clientes fijos, enfocados en 	el respeto, al margen de las normas de cortesía, con técnicas de ventas fundamentadas en el buen trato al cliente. El puesto reportaba al Supervisor del Call Center y a la Gerencia General.
+									 		</p>
 										</li>
 										<li>
-											<h5>Themeforest</h5>
-											<span class="year"><i class="fa fa-calendar"></i> 2009 - 2014</span>
-											<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor.</p>
+											<h5>Automar, C.A. (Concesionario Automotriz)</h5>
+											<span class="year"><i class="fa fa-calendar"></i> Abr-Jun 2010</span>
+											<p>Prácticas profesionales fundamentadas en el aprendizaje de las actividades que realiza un Departamento de Sistemas. Para ese momento, la empresa contaba con un personal superior a los 400 trabajadores. El puesto reportaba a la Gerencia de Sistemas.</p>
 										</li>
 									</ul>
 								</div>
@@ -423,14 +224,15 @@
 				<footer>
 					<div class="row">
 						<div class="col-md-7">
-							<p>&copy; 2016 Oriana Ruiz. Todos los derechos reservados.</p>
+							<div style="font-style:italic;">Si yo no lo sé, Stack Overflow lo sabe.</div>
+							<p>&copy; 2016 Oriana Ruiz. <span class="fa fa-heart"></span> Todos los derechos reservados.</p>
 						</div>
 						<div class="col-md-5">
 							<ul class="social">
-								<li><a href="http://www.facebook.com/oriana.ruiz92"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="http://www.twitter.com/ori_ru"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="http://instagram.com/oriru92"><i class="fa fa-instagram"></i></a></li>
-								<li><a href="https://ve.linkedin.com/in/oriana-ruiz-alfonzo-98369110b"><i class="fa fa-linkedin"></i></a></li>
+								<li><a target="_blank" href="http://www.facebook.com/oriana.ruiz92"><i class="fa fa-facebook"></i></a></li>
+								<li><a target="_blank" href="http://www.twitter.com/ori_ru"><i class="fa fa-twitter"></i></a></li>
+								<li><a target="_blank" href="http://instagram.com/oriru92"><i class="fa fa-instagram"></i></a></li>
+								<li><a target="_blank" href="https://ve.linkedin.com/in/oriana-ruiz-alfonzo-98369110b"><i class="fa fa-linkedin"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -453,10 +255,6 @@
 <script src="js/main.js"></script>
 <script src="js/contact.js"></script>
 <script src="js/animations.js"></script>
-
-<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-<script src="js/gmaps.js"></script>
-
 
 </body>
 </html>
