Solve some issues

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 						<!-- SECTION 1 - HOMEPAGE -->
 						<section class="no-display">
 							<div class="profile" id="1">
-								<h2>Hola, soy <span>Oriana Ruiz</span><br>Desarrolador Web y Backend</h2>
+								<h2>Hola, soy <span>Oriana Ruiz</span><br>Desarrollador Web y Backend</h2>
 								<div class="sep1"></div>
-								<p>Soy estudiante del 8vo semestre de la Licenciatura en Ciencias de la Computación. A lo largo de mi carrera he aprendido a trabajar en el arte de la programación Web. En conjunto con la base de conocimiento impartida en la universidad, y a mi instinto autodidacta, tengo experiencia haciendo aplicaciones Web con Responsive Design usando Laravel, Codeigniter (un oscuro pasado), con MySQL y PostgreSQL, CSS3 y HTML5.</p>
+								<p>Soy estudiante del 8vo semestre de la Licenciatura en Ciencias de la Computación. A lo largo de mi carrera he aprendido a trabajar en el arte de la programación Web. En conjunto con la base de conocimientos recibida en la universidad, y a mi instinto autodidacta, tengo experiencia haciendo aplicaciones Web con Responsive Design usando Laravel, Codeigniter (un oscuro pasado), con MySQL y PostgreSQL, CSS3 y HTML5.</p>
 								<div class="personal-info col-md-12 no-padding">
 									<h4>Sobre mi</h4>
 									<div class="sep2"></div>
@@ -92,7 +92,7 @@
 											<div class="p-info"><em>nombre</em><span>Oriana Ruiz</span></div>
 										</li>
 										<li>
-											<div class="p-info"><em>fecha de nacimiento</em><span>12 de mayo de 1992</span></div>
+											<div class="p-info"><em>f. de nac.</em><span>12 de mayo de 1992</span></div>
 										</li>
 										<li>
 											<div class="p-info"><em>e-mail</em><span>oriru92@gmail.com</span></div>
@@ -132,7 +132,7 @@
 											<h5>Técnico Medio en Servicios Administrativos Mención Informática</h5>
 											<h5>U.E. Colegio Don Bosco</h5>
 											<span class="year"><i class="fa fa-calendar"></i> 1997 - 2010</span>
-											<p>Formación técnica de calidad, aplicando desde conocimientos básicos del computador, hasta el aprendizaje de herramientas de desarrollo de Software, con una formación fundamentada con un profundo sentido moral y ético, que forjó mi carácter para las tareas que me ha tocado afrontar en mi vida personal y profesional.</p>
+											<p>Formación técnica de calidad, aplicando desde conocimientos básicos del computador, hasta el aprendizaje de herramientas de desarrollo de Software, con una formación fundamentada en un profundo sentido moral y ético, que forjó mi carácter para las tareas que me ha tocado afrontar en mi vida personal y profesional.</p>
 										</li>										
 									</ul>
 								</div>
@@ -204,7 +204,7 @@
 										<li>
 											<h5>Performance Latinoamericana, S.R.L.</h5>
 											<span class="year"><i class="fa fa-calendar"></i> Nov - 2013</span>
-											<p>Me desempeñé como Operadora de Telemercadeo, donde mi tarea se enfocaba en la adquisición de clientes potenciales y mantención de clientes fijos, enfocados en 	el respeto, al margen de las normas de cortesía, con técnicas de ventas fundamentadas en el buen trato al cliente. El puesto reportaba al Supervisor del Call Center y a la Gerencia General.
+											<p>Me desempeñé como Operadora de Telemercadeo, donde mi tarea se enfocaba en el contacto con clientes potenciales y fijos, con un trato fomentado en el respeto, al margen de las normas de cortesía, con técnicas de ventas fundamentadas en el buen trato al cliente. El puesto reportaba al Supervisor del Call Center y a la Gerencia General.
 									 		</p>
 										</li>
 										<li>
@@ -223,11 +223,11 @@
 				<!-- FOOTER -->
 				<footer>
 					<div class="row">
-						<div class="col-md-7">
-							<div style="font-style:italic;">Si yo no lo sé, Stack Overflow lo sabe.</div>
-							<p>&copy; 2016 Oriana Ruiz. <span class="fa fa-heart"></span> Todos los derechos reservados.</p>
+						<div class="col-md-8 col-xs-8 col-sm-8">
+							<p class="lol" style="font-style:italic;">Si yo no lo sé, Stack Overflow lo sabe.</p>
+							<p class="rights">&copy; 2016 Oriana Ruiz. Todos los derechos reservados.</p>
 						</div>
-						<div class="col-md-5">
+						<div class="col-md-4 col-xs-4 col-sm-4">
 							<ul class="social">
 								<li><a target="_blank" href="http://www.facebook.com/oriana.ruiz92"><i class="fa fa-facebook"></i></a></li>
 								<li><a target="_blank" href="http://www.twitter.com/ori_ru"><i class="fa fa-twitter"></i></a></li>
