--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<div class="row">
 			<div class="col-md-3 l-content">
 				<div class="profile-pic">
-					<div class="pic-bg round-pic"><img src="images/profile.png" class="img-responsive" alt=""/></div>
+					<div class="pic-bg round-pic"><img src="images/profile.jpg" class="img-responsive" alt=""/></div>
 				</div>
 				<nav>
 				<ul class="navigation">
