Quick fix. README updated.

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 										<li>
 											<h5>Corpus ING, C.A</h5>
 											<span class="year"><i class="fa fa-calendar"></i> May 2016 - act</span>
-											<p>Actualmente me encuentro desarrollando una aplicación para el GPS track de vehículos particulares. Este producto se caracteriza por utilizar las más recientes tecnologías, por ejemplo, Angular 2, Ionic 2 y Firebase. Ha sido una experiencia interesante y gratificante, a pesar de ser un equipo de desarrollo bastante reducido. Por ser StartUp, el trabajo es colaborativo.</p>
+											<p>Me encuentro desarrollando una aplicación para el GPS tracking de vehículos particulares. Este producto se caracteriza por utilizar las más recientes tecnologías, por ejemplo, Angular 2, Ionic 2 y Firebase. Ha sido una experiencia interesante y gratificante, a pesar de ser un equipo de desarrollo bastante reducido. Por ser StartUp, el trabajo es colaborativo.</p>
 										</li>
 										<li>
 											<h5>Grupo Nepuntobiz, C.A</h5>
